--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,3 +11,4 @@ export(get_valtx)
 export(merge_rmp_valtx_nonvaltx_blockinfo)
 export(merge_rmp_valtx_nonvaltxnoduplicates_blockinfo)
 export(recomended_fees)
+importFrom(jsonlite,fromJSOn)
