--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,8 @@
 export(get_block_count)
 export(get_block_data)
 export(get_block_hash)
+export(get_fee_recommendation)
 export(get_raw_mempool)
 export(get_time_of_last_block)
 export(get_transaction_data)
-export(recomended_fees)
 importFrom(jsonlite,fromJSON)
