--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,4 +7,5 @@ export(get_fee_recommendation)
 export(get_raw_mempool)
 export(get_time_of_last_block)
 export(get_transaction_data)
+export(get_val_tx)
 importFrom(jsonlite,fromJSON)
